--- a/TipTopShoes/Style.css
+++ b/TipTopShoes/Style.css
@@ -3,14 +3,29 @@ Body{
 }
 #Banner{
     text-align: center;
-    padding: 20px;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
-    background-color: violet;
+    height: 100px;
+    display: block;
+    box-shadow: 0 0 10px 10px #d8d8d8;
 }
 
-/* #logo{
-    margin-right: 0%;
-} */
+#Banner a{
+    display: inline-block;
+    margin-right: 5%;
+    padding-top: 40px;
+}
+
+#logo{
+    width: 60px;
+    left: 20px;
+    top: 20px;
+    position: absolute;
+}
+
+img {
+    max-width: 100%;
+}
+
