--- a/TipTopShoes/Style.css
+++ b/TipTopShoes/Style.css
@@ -1,18 +1,19 @@
 Body{
     background-color: #FFFFFF;
+    font-family: Tahoma, sans-serif;
 }
-#Banner{
+nav{
     text-align: center;
     position: absolute;
     top: 0;
     left: 0;
     width: 100%;
     height: 100px;
-    display: block;
+    display: inline-block;
     box-shadow: 0 0 10px 10px #d8d8d8;
 }
 
-#Banner a{
+nav a{
     display: inline-block;
     margin-right: 5%;
     padding-top: 40px;
@@ -29,3 +30,16 @@ img {
     max-width: 100%;
 }
 
+#Latest_Arrivals {
+    text-align: center;
+    /* position: absolute; */
+    margin: auto;
+    margin-top: 150px;
+    top: 150px;
+    width: 85%;
+    height: 400px;
+    /* display: inline-block; */
+    box-shadow: 0 0 10px 10px #d8d8d8;
+    box-sizing: border-box;
+    padding: 10px;
+}
