--- a/TipTopShoes/Style.css
+++ b/TipTopShoes/Style.css
@@ -31,15 +31,26 @@ img {
 }
 
 #Latest_Arrivals {
-    text-align: center;
-    /* position: absolute; */
+
     margin: auto;
     margin-top: 150px;
     top: 150px;
-    width: 85%;
+    width: 65%;
     height: 400px;
     /* display: inline-block; */
     box-shadow: 0 0 10px 10px #d8d8d8;
     box-sizing: border-box;
     padding: 10px;
+    text-align: center;
+}
+
+
+#Images div{
+    display: inline-flex;
+    flex-direction: row;
+    font-size: 20px;
+
+}
+#Images img{
+    width: 40%;
 }
