--- a/TipTopShoes/Style.css
+++ b/TipTopShoes/Style.css
@@ -48,9 +48,16 @@ img {
 #Images div{
     display: inline-flex;
     flex-direction: row;
-    font-size: 20px;
+    /* font-size: 20px; */
+    align-content: center;
+   
 
 }
 #Images img{
     width: 40%;
+}
+
+#Images{
+    display: flex;
+    flex-wrap: nowrap;
 }
