--- a/TipTopShoes/Style.css
+++ b/TipTopShoes/Style.css
@@ -49,7 +49,7 @@ img {
     display: inline-flex;
     flex-direction: row;
     /* font-size: 20px; */
-    align-content: center;
+    align-content:space-between;
    
 
 }
@@ -60,4 +60,5 @@ img {
 #Images{
     display: flex;
     flex-wrap: nowrap;
+    padding: 20 10 10 20
 }
